# sillymarkov

./: sillymarkov.cabal
scripts/: deploy-haddock-manually.sh
src/Data/: SillyMarkov.hs
