name:                sillymarkov
version:             0.1.0.0
synopsis:            Playing with Markov chain stuff
-- description:
homepage:            https://github.com/relrod/sillymarkov
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , text >= 1 && < 2
                     , containers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010